BaSP-2022: Overflow problems solved

--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -1,19 +1,9 @@
-header, main, footer, nav, section {
-  border: 0px solid blue;
-}
+/* * {
+  outline: 1px solid blue;
+} */
 
 body {
   font-family: 'Roboto';
-}
-
-header {
-  position: relative;
-  left: 288px;
-  height: 100px;
-  width: 1152px;
-  background: white;
-  border-bottom: 5px solid #FF5500;
-  z-index: 1;
 }
 
 h1 {
@@ -42,10 +32,21 @@ p {
 }
 
 .button {
-  width: 46px;
+  height: 46px;
   border-radius: 5px;
   border: 1px solid #FF5500;
   background: white;
+  color: #FF5500;
+}
+
+header {
+  position: relative;
+  left: 288px;
+  height: 100px;
+  width: 1152px;
+  background: white;
+  border-bottom: 5px solid #FF5500;
+  z-index: 1;
 }
 
 #menu-icon {
@@ -84,11 +85,10 @@ nav {
   background-color: #DDDDDD;
 }
 
-
 main {
   position: absolute;
   width: 1080px;
-  width: 2172px;
+  height: 2172px;
   top: 149px;
   left: 318px;
 }
@@ -120,7 +120,6 @@ main {
 }
 
 /* Disponer las features de 2 en 2 */
-
 .functionalities-item {
   display: inline-block;
   width: 49%;
@@ -138,11 +137,21 @@ main {
 
 #why-trackgenix  {
   height: 368px;
+  width: 1080px;
 }
 
-#why-trackgenix > div{
+.why-trackgenix-content {
   display: inline-block;
+  margin-top: 52px;
   margin-left: 130px;
+}
+
+.why-trackgenix-content h2 {
+  margin-bottom: 20px;
+}
+.why-trackgenix-content button {
+  width: 131px;
+  margin: 50px 0px;
 }
 
 .why-trackgenix-img {
@@ -154,15 +163,59 @@ main {
 
 #contact {
   height: 512px;
+  width: 1080px;
+}
+
+.text-input{
+  width: 523px;
+  height: 37px;
+  outline: 1px solid red;
+}
+
+/* Ver que pasa con el margen, deberia ser 34px */
+.text-input:nth-child(2) {
+  margin-left: 29px;
+}
+
+select {
+  width: 100%;
+  height: 37px;
+  margin: 40px 0px;
+  outline: 1px solid blue;
+}
+
+textarea {
+  width: 100%;
+  height: 97px;
+  margin-bottom: 40px;
+  outline: 1px solid green;
+}
+
+.submit-button {
+  width: 171px;
+  margin-right: 45px;
+  background-color: #FF5500;
+  color: white;
+}
+
+.reset-button {
+  width: 111px;
 }
 
 #our-story {
   height: 380px;
+  width: 1080px;
 }
 
 .our-story-img {
   width: 435.61px;
   height: 219.38px;
+}
+
+.our-story-content {
+  display: inline-block;
+  width: 610px;
+  word-wrap: break-word;
 }
 
 footer {
@@ -179,6 +232,7 @@ footer {
   height: 316px;
 }
 
+/* ¿ Esta bien que los numeros de los li queden "afuera" del div ? */
 .our-services-item {
   position: relative;
   display: inline-block;
@@ -195,5 +249,9 @@ footer {
 }
 
 .copy{
- text-align: center;
+  position: relative;
+  width: 416px;
+  margin:0px 358px;
+  text-align: center;
 }
+
